fix mini_chart width on mobile

--- a/src/components/UserInfo/userInfo.module.scss
+++ b/src/components/UserInfo/userInfo.module.scss
@@ -269,7 +269,7 @@
         max-width: 250px;
 
         @media(max-width: 1199px) {
-          max-width: unset;
+          margin: 0 auto;
         }
       }
     }
